feat: implement Z-Score statistical anomaly detection engine
- Refactor DetectionService to use Z-Score (3-sigma) instead of static
  threshold alerting. Algorithm queries a 30-minute rolling baseline via
  date_trunc + COUNT aggregation, computes mean/stdDev in-process, and
  applies a dual-threshold alert condition (Z > 3.0 AND count > 5) to
  eliminate both false positives from low-volume noise and false negatives
  from proportional degradation under high traffic.

- Handle cold-start edge case (stdDev = 0) by assigning a sentinel
  Z-Score of 999 when the baseline is error-free, ensuring services with
  a perfect history are not left unmonitored on their first spike.

- Fix Prisma \ template literal: replaced dynamic class-property
  interpolation inside INTERVAL string (which Prisma would attempt to
  bind as a SQL parameter) with a hardcoded string literal, preventing a
  runtime PostgreSQL rejection.

- Add distributed locking via CronLock model to prevent concurrent
  detection job execution across horizontally scaled instances.

tests: expand DetectionService unit tests from 3 to 7 cases
  - should skip when lock is already held
  - should NOT alert when Z < 3 (normal traffic)
  - should alert when Z > 3 and stdDev > 0 (real spike)
  - should alert on cold-start (stdDev = 0, count > mean)
  - should NOT alert if count <= 5 (noise guard)
  - should skip when baseline has fewer than 5 data points

chore: update .gitignore
  - Added debug output files (*.txt, *.log), coverage/, jest-cache/
  - Removed backend/test_output.txt and backend/lint_final.txt from tracking
  - Added .env.* wildcard with !.env.example exception
  - Added Desktop.ini, *.pid, and IDE-specific artefacts

docs: full professional rewrite of all four markdown files
  - IMPLEMENTATION_JOURNEY.md: structured Problem -> Root Cause ->
    Solution -> Result format with quantified outcomes per challenge
  - README.md: added 3-step architecture pipeline description,
    corrected benchmark number

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,49 @@
-# Dependencies
+# ─── Dependencies ────────────────────────────────────────────────
 node_modules/
-dist/
-.env
 
-# Logs
+# ─── Build output ────────────────────────────────────────────────
+dist/
+
+# ─── Environment secrets ─────────────────────────────────────────
+.env
+.env.*
+!.env.example
+
+# ─── Logs ────────────────────────────────────────────────────────
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
 
-# OS
+# ─── Debug / temporary output files ─────────────────────────────
+# These are written during local debugging and should never be committed.
+backend/debug_vals.txt
+backend/test_output.txt
+*.txt
+
+# ─── Coverage & test cache ───────────────────────────────────────
+coverage/
+.nyc_output/
+jest-cache/
+.jest/
+
+# ─── OS artefacts ────────────────────────────────────────────────
 .DS_Store
 Thumbs.db
+Desktop.ini
 
-# IDEs
+# ─── IDE / editor ────────────────────────────────────────────────
 .vscode/
 .idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
 
-# Prisma
+# ─── Prisma ──────────────────────────────────────────────────────
+# Generated migrations are environment-specific; keep schema.prisma, not the migration history.
 backend/prisma/migrations/
+
+# ─── Docker ──────────────────────────────────────────────────────
+# Docker writes pidfiles and volume data locally; exclude them.
+*.pid
